<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView_Salida"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/salida"/>

    <TextView
        
        android:id="@+id/textView_llegada"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/llegada"/>

    <TextView
        android:id="@+id/textView_dias"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/dias"/>

    <TextView
        android:id="@+id/textView_tarifa"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/tarifa"/>

</LinearLayout>